# antara-gaming-sdk

./: .clang-format  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTORS.md  LICENSE.md  README.md  README.rst  ROADMAP.md  appveyor.yml  codecov.yml  lgtm.yml
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  requirements.txt
docs/source/api/: animation2d.rst  api_index.rst  config.rst  core.rst  ecs.rst  event.rst  sfml.rst
docs/source/helpers/: alternative_README.rst
docs/source/modules/: animation2d.rst  audio.rst  blockchain.rst  box2d.rst  collisions.rst  config.rst  core.rst  ecs.rst  event.rst  geometry.rst  graphics.rst  input.rst  lua.rst  math.rst  modules.rst  resources.rst  scenes.rst  sfml.rst  timer.rst  transform.rst  world.rst
docs/source/tutorials/: animation2d.rst  basic_setup.rst  ecs.rst  event.rst  flappy-bird.rst  getting_started.rst  quick_and_dirty.rst  tic-tac-toe.rst  tutorials.rst
examples/: CMakeLists.txt
examples/blockchain/: CMakeLists.txt
examples/blockchain/fake_ingame_shop/: CMakeLists.txt
examples/blockchain/fake_ingame_shop/data/osx/: Packaging_CMakeDMGSetup.scpt  blockchain_ingame_shop_example_install.cmake
examples/common/: CMakeLists.txt  step_basis_world_compiling.cpp
examples/dummy_examples/: CMakeLists.txt  main.cpp
examples/ecs/: system.example.cpp
examples/quick_and_dirty/: quick_and_dirty.cpp
examples/sdl/basis-draft/: CMakeLists.txt  main.cpp
examples/sdl/basis-draft/data/osx/: sdl_example_install.cmake
examples/sfml/: CMakeLists.txt  main.cpp
examples/sfml/basis-draft/: CMakeLists.txt  main.cpp
examples/sfml/basis-draft/assets/config/: game.config.json
examples/sfml/basis-draft/data/linux/: org.antara.gaming.sfml.basisdraft.desktop
examples/sfml/data/osx/: Packaging_CMakeDMGSetup.scpt  sfml_example_install.cmake
examples/sfml/flappy-bird/: CMakeLists.txt  game.scene.cpp  game.scene.hpp  intro.scene.cpp  intro.scene.hpp  world.cpp  world.hpp
examples/sfml/flappy-bird-scripted/: CMakeLists.txt  main.cpp  world.cpp  world.hpp
examples/sfml/flappy-bird-scripted/data/osx/: Packaging_CMakeDMGSetup.scpt
examples/sfml/flappy-bird/data/linux/: org.antara.gaming.sfml.flappybirds.appdata.xml
examples/sfml/flappy-bird/data/osx/: Packaging_CMakeDMGSetup.scpt
examples/sfml/tic-tac-toe/: CMakeLists.txt  game.scene.cpp  game.scene.hpp  main.cpp  tic.tac.toe.components.hpp  tic.tac.toe.constants.hpp  tic.tac.toe.factory.cpp  tic.tac.toe.factory.hpp  world.cpp  world.hpp
examples/sfml/tic-tac-toe-scripted/: CMakeLists.txt  world.hpp
examples/sfml/tic-tac-toe-scripted/data/linux/: org.antara.gaming.sfml.tictactoe.scripted.appdata.xml  org.antara.gaming.sfml.tictactoe.scripted.desktop
examples/sfml/tic-tac-toe-scripted/data/osx/: sfml_tictactoe_scripted_install.cmake
examples/sfml/tic-tac-toe/assets/config/: game.config.json  game.config.maker.json
examples/sfml/tic-tac-toe/data/linux/: org.antara.gaming.sfml.tictactoe.appdata.xml  org.antara.gaming.sfml.tictactoe.desktop
examples/sfml/tic-tac-toe/data/osx/: sfml_tictactoe_install.cmake
messy_playground/: CMakeLists.txt
messy_playground/blockchain/fake_ingame_shop/: CMakeLists.txt  main.cpp  nspv_fake_ingame_shop.cpp
messy_playground/blockchain/fake_ingame_shop/data/linux/: org.antara.gaming.sfml.basisdraft.appdata.xml
messy_playground/ecs/: CMakeLists.txt
messy_playground/glfw/: CMakeLists.txt
messy_playground/glfw/basis-draft/: CMakeLists.txt  main.cpp
messy_playground/glfw/basis-draft/data/linux/: org.antara.gaming.glfw.basisdraft.appdata.xml  org.antara.gaming.glfw.basisdraft.desktop
messy_playground/glfw/basis-draft/data/osx/: Packaging_CMakeDMGSetup.scpt  glfw_example_install.cmake
messy_playground/quick_and_dirty/: CMakeLists.txt  quick_and_dirty.cpp
messy_playground/sdl/basis-draft/: CMakeLists.txt  main.cpp
messy_playground/sdl/basis-draft/data/linux/: org.antara.gaming.sdl.basisdraft.appdata.xml  org.antara.gaming.sdl.basisdraft.desktop
messy_playground/sdl/basis-draft/data/osx/: Packaging_CMakeDMGSetup.scpt
messy_playground/sfml/: CMakeLists.txt
messy_playground/sfml/basis-draft/: CMakeLists.txt  main.cpp
messy_playground/sfml/flappy-bird/: CMakeLists.txt  game.scene.cpp  intro.scene.cpp  main.cpp  world.hpp
messy_playground/sfml/flappy-bird-scripted/: CMakeLists.txt  world.hpp
messy_playground/sfml/flappy-bird-scripted/data/osx/: sfml_flappy_install.cmake
messy_playground/sfml/flappy-bird/data/linux/: org.antara.gaming.sfml.flappybird.desktop
messy_playground/sfml/flappy-bird/data/osx/: sfml_flappy_install.cmake
messy_playground/sfml/tic-tac-toe/: game.scene.hpp  tic.tac.toe.components.hpp  tic.tac.toe.constants.hpp  tic.tac.toe.factory.cpp  world.cpp  world.hpp
messy_playground/sfml/tic-tac-toe-scripted/: CMakeLists.txt  main.cpp  world.cpp
messy_playground/sfml/tic-tac-toe-scripted/data/osx/: Packaging_CMakeDMGSetup.scpt
messy_playground/sfml/tic-tac-toe/assets/config/: game.config.maker.json
messy_playground/sfml/tic-tac-toe/data/osx/: Packaging_CMakeDMGSetup.scpt
modules/: CMakeLists.txt
modules/animation2d/: CMakeLists.txt
modules/animation2d/antara/gaming/animation2d/: animation.2d.cpp  (+4 more)
modules/audio/: CMakeLists.txt
modules/blockchain/: CMakeLists.txt
modules/blockchain/assets/tools/: coins  nspv
modules/box2d/: CMakeLists.txt
modules/collisions/: CMakeLists.txt
modules/config/: CMakeLists.txt
modules/core/: CMakeLists.txt
modules/ecs/: CMakeLists.txt
modules/event/: CMakeLists.txt
modules/geometry/: CMakeLists.txt
modules/glfw/: CMakeLists.txt
modules/graphics/: CMakeLists.txt
modules/input/: CMakeLists.txt
modules/lua/: CMakeLists.txt
modules/lua/assets/scripts/: antara.entity.player.lua
modules/lua/lua_assets/scripts/: antara.tests.lua
modules/math/: CMakeLists.txt
modules/resources/: CMakeLists.txt
modules/scenes/: CMakeLists.txt
modules/sdl/: CMakeLists.txt
modules/sfml/: CMakeLists.txt
modules/timer/: CMakeLists.txt
modules/transform/: CMakeLists.txt
modules/world/: CMakeLists.txt
(+258 files in other folders)
